Fixed weird z-index issue

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,3 +8,6 @@ h1{
 tr.selected{
 	border-left: 3px solid $starfind-purple;
 }
+.input-group{
+	z-index: 0 !important;
+}
